# Navarro

./: IMPROVEMENT-PLAN.md  navarro.py  pyproject.toml
.github/workflows/: test.yml
navarro/: __init__.py  cli.py
navarro/core/: __init__.py  base.py  enums.py  rate_limiter.py  session_manager.py
tests/: __init__.py  test_core.py  test_platforms.py  test_validation.py
